test/files/neg/t5892.check
t5892.scala:5: error: type mismatch;
 found   : Boolean(false)
 required: String
class C[@annot(false) X] {
               ^
t5892.scala:9: error: not found: value b2s
class D[@annot(b2s(false)) X] {
               ^
t5892.scala:13: error: type mismatch;
 found   : Boolean(false)
 required: String
@annot(false) class E {
       ^
t5892.scala:17: error: not found: value b2s
@annot(b2s(false)) class F {
       ^
four errors found
